--- a/style.css
+++ b/style.css
@@ -80,7 +80,9 @@ footer {
 
 header h2 {
     font-size: 24px;
+    font-weight: bold;
     color: var(--white);
+    margin-left: 20px;
 }
 
 header inner-column {
@@ -203,16 +205,17 @@ product-grid li text-content {
 quote-block {
     display: block;
     text-align: left;
-    max-width: 800px;
+    max-width: 900px;
     margin-left: auto;
     margin-right: auto;
-    padding: 10px;
+    padding: 40px;
 }
 
 quote-block h2 {
     font-style: italic;
     font-size: 36px;
     font-weight: light;
+    line-height: 1.2em;
     color: var(--dark);
     margin-bottom: 5px;
 }
@@ -220,9 +223,10 @@ quote-block h2 {
 quote-block h3 {
     display: flex;
     justify-content: flex-end;
-    font-size: 1.1em;
+    font-size: 1.4em;
     font-weight: bold;
     color: var(--dark);
+    margin-right: 20px;
 }
 
 cta-block {
@@ -234,33 +238,33 @@ cta-block {
     background-color: var(--button);
     border-radius: 6px;
     max-width: 1100px;
-    height: 100px;
-    line-height: 1.2rem;
+    height: 150px;
+    line-height: 1.6rem;
 
 }
 
 cta-block h2 {
-    font-size: 1.2em;
+    font-size: 1.4em;
     font-weight: 600;
     color: var(--white);
 }
 
 cta-block h3 {
-    font-size: .9em;
+    font-size: 1.1em;
     font-weight: light;
     color: var(--light);
 }
 
 cta-block .button {
-    font-size: .8em;
-    border: 1px var(--white) solid;
-    width: 100px;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2em;
+    font-weight: bolder;
+    border: 2px var(--white) solid;
+    width: 140px;
+    height: 40px;
 }
-
-
-
-
 
 
 
